--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,14 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    //RecycleView
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 }
